# fav

./: .gitignore
fav/: CMakeLists.txt  package.xml
fav/launch/: scenario.launch.py  simulation.launch.py  simulation_with_keyboard_control.launch.py  simulation_with_tags.launch.py  simulation_with_tags_and_keyboard_control.launch.py
fav/nodes/: scenario_node.py
fav/src/: robot_marker_publisher.cpp
fav/src/scenario/: scenario_node.cpp  scenario_node.hpp  viewpoint.hpp
keyboard_control/: CMakeLists.txt  package.xml
keyboard_control/nodes/: keyboard_control_node
scenario_msgs/: CMakeLists.txt  package.xml
scenario_msgs/msg/: Viewpoint.msg
